fix affix jumping behavior

--- a/app/assets/stylesheets/modules/_nav.styl
+++ b/app/assets/stylesheets/modules/_nav.styl
@@ -144,7 +144,10 @@ body.fixed-nav
 body.course-page nav.top-nav
   position relative
 
-.course-nav__wrapper.affix
+.course-nav__wrapper
+  height 55px
+
+.course_navigation.affix
   margin-top -57px
   z-index 9999
   width 100%
